# hacknation-genome-analysis

./: .gitignore  AUDIT.md  DEPLOY.md  LICENSE  README.md  RUN_150.md  requirements.txt  streamlit_app.py
.streamlit/: config.toml
data/bvbrc_ecoli/: cohort_manifest.json
module1_genome_reader/: .gitignore  OUTPUT_FORMAT_SPEC.md  README.md  environment.yml  pyproject.toml
module1_genome_reader/config/: config.example.yaml
module1_genome_reader/scripts/: demo_mock_run.py  fetch_test_fixtures.sh  setup_amrfinder.sh
module1_genome_reader/src/genome_reader/: __init__.py  annotate.py  cli.py  config.py  constants.py  discovery.py  fasta.py  manifest.py  matrix.py  parse.py  pipeline.py  schema.py  versions.py
module1_genome_reader/tests/: conftest.py  test_discovery.py  test_end_to_end.py  test_fasta.py  test_matrix_schema.py  test_parse.py
module1_genome_reader/tests/data/mock_amrfinder/: genome_A.tsv  genome_B.tsv  genome_C.tsv
module2_predictor/: .gitignore  Makefile  README.md  pyproject.toml
module2_predictor/contracts/: config.yaml  labels.schema.json  model_artifact.schema.json  target_genes.schema.json
module2_predictor/scripts/: make_fixtures.py
module2_predictor/src/predictor/: __init__.py  cli.py  config.py  distance.py  gate.py  inference.py  io.py  metrics.py  model.py  report.py  splits.py  train.py
module2_predictor/tests/: conftest.py  test_config.py  test_end_to_end.py  test_gate.py  test_splits_no_leakage.py
module2_predictor/tests/fixtures/: feature_schema.json  features_binary.csv  features_binary.parquet  labels.csv  target_genes.csv
module3_decision_report/: Makefile  README.md  pyproject.toml
module3_decision_report/.streamlit/: config.toml
module3_decision_report/src/decision_report/: __init__.py  app.py  catalog.py  cli.py  config.py  contracts.py  decision.py  evaluation.py  evidence.py  metrics.py  mock_pipeline.py  real_pipeline.py  report.py
module3_decision_report/tests/: conftest.py  test_app.py  test_decision.py  test_end_to_end.py  test_evaluation.py  test_evidence.py  test_real_pipeline.py  test_report.py
scripts/: demo_real_pipeline.py  fetch_bvbrc_ecoli.py  shard_150.sh
training_prep/cohort_149/: cohort_manifest.json  genome_ids.txt  labels.csv  target_genes.csv
(+32 files in other folders)
