[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "genome-reader"
version = "0.1.0"
description = "Module 1 - The Genome Reader: assembled bacterial genomes -> reproducible AMR feature matrix (AMRFinderPlus)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "pandas>=2.0",
    "pyarrow>=12.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
test = ["pytest>=7.0"]

[project.scripts]
genome-reader = "genome_reader.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
