[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "amr-predictor"
version = "0.1.0"
description = "Module 2 - The Predictor: leakage-safe, calibrated per-drug AMR models with a deterministic target gate."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "pyarrow>=12.0",
    "scikit-learn>=1.3",
    "scipy>=1.10",
    "matplotlib>=3.7",
    "joblib>=1.3",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
test = ["pytest>=7.0"]

[project.scripts]
predictor = "predictor.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["src"]
